--- a/le1ji.6.6.config
+++ b/le1ji.6.6.config
@@ -2,6 +2,7 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_GRUB_IMAGES=y
+CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_LINUX_6_6=y
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh-tw=y
@@ -13,8 +14,13 @@ CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_check=y
+CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_clamav=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_dns2socks=y
+CONFIG_PACKAGE_dns2tcp=y
 # CONFIG_PACKAGE_etherwake is not set
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hysteria=y
@@ -67,15 +73,17 @@ CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_kmod-sit=y
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 CONFIG_PACKAGE_libbz2=y
-# CONFIG_PACKAGE_libcares is not set
+CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblzo=y
-# CONFIG_PACKAGE_libmbedtls is not set
 CONFIG_PACKAGE_libmilter-sendmail=y
 CONFIG_PACKAGE_libparted=y
+CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libxml2=y
@@ -108,17 +116,6 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
 CONFIG_PACKAGE_luci-app-poweroff=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadow_TLS=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server is not set
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_V2ray_Plugin=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic_Client=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-turboacc is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
@@ -145,13 +142,15 @@ CONFIG_PACKAGE_luci-i18n-samba4-en=y
 CONFIG_PACKAGE_luci-i18n-samba4-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-netgear=y
-#CONFIG_PACKAGE_luci-theme-opentopd=y
 CONFIG_PACKAGE_mdadm=y
+CONFIG_PACKAGE_microsocks=y
 # CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
@@ -159,12 +158,17 @@ CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_parted=y
 # CONFIG_PACKAGE_pdnsd-alt is not set
-CONFIG_PACKAGE_redsocks2=y
-CONFIG_PACKAGE_shadow-tls=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-server is not set
+CONFIG_PACKAGE_resolveip=y
+CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
 CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
@@ -176,8 +180,10 @@ CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_xray-plugin=y
 CONFIG_PARTED_READLINE=y
+CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_SING_BOX_WITH_CLASH_API=y
 CONFIG_SING_BOX_WITH_DHCP=y
 CONFIG_SING_BOX_WITH_ECH=y
