--- a/.github/workflows/imji.6.6.yml
+++ b/.github/workflows/imji.6.6.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Configuration Customization - Build_x86_64
       env:
-        CONFIG_FILE: 'im1ji.6.6.config'
+        CONFIG_FILE: 'imji.6.6.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
