--- a/.github/workflows/imji.6.6.yml
+++ b/.github/workflows/imji.6.6.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: im1ji.6.6
+name: imji.6.6
 
 # Add a button to trigger the workflow
 on: 
