--- a/.github/workflows/openwrt1.6.12.yml
+++ b/.github/workflows/openwrt1.6.12.yml
@@ -55,7 +55,7 @@ jobs:
 
     - name: Clone source code
       env: 
-        REPO_URL: https://github.com/openwrt/openwrt
+        REPO_URL: https://github.com/fakeyouall/openwrt-openwrt
         REPO_BRANCH: main
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
